<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/firstname_text_view"/>
            <EditText
                android:id="@+id/edit_text_firstname_value"
                android:inputType="textPersonName"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/lastname_text_view"/>
            <EditText
                android:id="@+id/edit_text_lastname_value"
                android:inputType="textPersonName"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/birthdate_text_view"/>
            <DatePicker
                android:id="@+id/date_picker_birthdate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:startYear="1850"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/sex_text_view"/>
            <EditText
                android:id="@+id/edit_text_sex_value"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/phone_number_text_view"/>
            <EditText
                android:id="@+id/edit_text_phone_number_value"
                android:inputType="phone"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/email_address_label_text_view"/>
            <EditText
                android:id="@+id/edit_text_email_address_value"
                android:inputType="textEmailAddress"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/home_address_label_text_view"/>
            <EditText
                android:id="@+id/edit_text_street_address_value"
                android:inputType="textEmailAddress"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/postal_code_text_view"/>
            <EditText
                android:id="@+id/edit_text_postal_code_value"
                android:inputType="phone"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/country_text_view"/>
            <EditText
                android:id="@+id/edit_text_country_name_value"
                android:layout_weight="0.5"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>