<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_report_receivers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_receivers_button"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_switch"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_switch"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>