<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_fitbit_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitbit_button"/>
        <Button
            android:id="@+id/button_gmail_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gmail_button"/>
        <Button
            android:id="@+id/button_app_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_button"/>
        <Button
            android:id="@+id/button_expert_system_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Expert system"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>