<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TextViewH2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/selected_sms_contacts_text_view"/>
            <Button
                android:id="@+id/button_add_email"
                style="@style/TextViewH2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/add_email_button"/>
        </LinearLayout>
        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/header_blue"/>
        <ListView
            android:id="@+id/list_view_report_receivers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header_blue"/>
        <TextView
            android:id="@+id/text_view_all_contacts"
            style="@style/TextViewH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:text="@string/all_sms_contacts_text_view"/>
        <EditText
            android:id="@+id/edit_text_find_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/find_contact_edit_text"
            android:paddingHorizontal="7sp"/>
        <ListView
            android:id="@+id/list_view_all_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>