<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_view_personal_data_label"
                    style="@style/TextViewH2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:linksClickable="false"
                    android:text="@string/general_info_text_view"/>
                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="?android:attr/listDivider"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/text_view_date_label"
                        style="@style/TextViewH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_date_text_view"/>
                    <TextView
                        android:id="@+id/text_view_date"
                        style="@style/TextViewH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="end"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/text_view_name_label"
                        style="@style/TextViewH3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_label_text_view"/>
                    <TextView
                        android:id="@+id/text_view_name_value"
                        style="@style/TextViewH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="end"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_view_summary_label"
                    style="@style/TextViewH2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_label_text_view"/>
                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="?android:attr/listDivider"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/text_view_analyze_result_label"
                        style="@style/TextViewH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analyze_result_label_text_view"/>
                    <TextView
                        android:id="@+id/text_view_analyze_result_value"
                        style="@style/TextViewH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="end"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_send_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_report_button"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>